4_5 egress/test-egress.yaml
apiVersion: v1
kind: Pod
metadata:
  name: egress-tester
  namespace: egress-demo
spec:
  containers:
  - name: ubuntu
    image: ubuntu:20.04
    command: ["sleep", "3650d"]
